# OctoPal

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
.serena/: project.yml
cp/: package-lock.json  package.json
docker/: Dockerfile
docs/: connectors.md  connectors_list.md  context_tool_loading.md  google_connector_setup.md  google_gmail_connector_setup.md  memory.md  observability_tracing_plan.md  ops_tools_and_templates.md  skills.md  telegram_bot_features.md
scripts/: bootstrap.ps1  bootstrap.sh  export_gateway_openapi.py  self_control_supervisor.py  sync_worker_templates.py
tests/: test_a2a_gateway.py  test_agent_loop_improvements.py  test_browser_actions.py  test_browser_manager.py  test_browser_snapshot.py  test_calendar_mcp_server.py  test_cli_connectors.py  test_cli_dashboard_runtime_status.py  test_cli_skill_install.py  test_cli_tools_resolve.py  test_cli_update.py  test_cli_version_check.py  test_cli_webapp_build.py  test_configure_llm.py  test_configure_provider_prefix.py  test_configure_saved_summary.py  test_configure_workspace_bootstrap.py  test_connector_tools.py  test_connectors.py  test_context_pruning.py  test_dashboard_actions_helpers.py  test_dashboard_filters.py  test_dashboard_incidents.py  test_dashboard_slo_noise.py  test_dashboard_snapshot_contract.py  test_dashboard_v2_api.py  test_dashboard_webapp_flag.py  test_experiment_tools.py  test_filesystem_hardening.py  test_gateway_status_tool.py  test_gateway_ws_resolution.py  test_gmail_mcp_server.py  test_heartbeat.py  test_housekeeping.py  (+74 more)
(+347 files in other folders)
