[project]
name = "broodmind"
version = "0.1.0"
description = "BroodMind Queen + Workers agent platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "BroodMind" }]

dependencies = [
  "aiogram>=3.5.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "typer>=0.12.0",
  "uvicorn>=0.27.0",
]

[project.scripts]
broodmind = "broodmind.cli.main:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
